create tags, fix tom-select

--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -1,1 +1,27 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+orange:
+  name: "An awesome project"
+  description: "I just ate an orange!"
+  github_link: "https://example.com"
+  created_at: <%= 10.minutes.ago %>
+  user: tolase
+
+tau_manifesto:
+  name: "An awesome project"
+  description: "Check out the @tauday site by @mhartl: https://tauday.com"
+  github_link: "https://example.com"
+  created_at: <%= 3.years.ago %>
+  user: archer
+
+cat_video:
+  name: "An awesome project"
+  description: "Sad cats are sad: https://youtu.be/PKffm2uI4dk"
+  github_link: "https://example.com"
+  created_at: <%= 2.hours.ago %>
+  user: tolase
+
+most_recent:
+  name: "An awesome project"
+  description: "Writing a short test"
+  github_link: "https://example.com"
+  created_at: <%= Time.zone.now %>
+  user: tolase
