--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.0-beta.2",
     "@popperjs/core": "^2.11.8",
+    "@rails/actiontext": "^7.1.2",
     "autoprefixer": "^10.4.16",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
@@ -12,7 +13,9 @@
     "nodemon": "^3.0.2",
     "postcss": "^8.4.32",
     "postcss-cli": "^11.0.0",
-    "sass": "^1.69.6"
+    "sass": "^1.69.6",
+    "tom-select": "^2.3.1",
+    "trix": "^2.0.8"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
