--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "autoprefixer": "^10.4.16",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
-    "esbuild": "^0.19.11",
+    "esbuild": "0.19.11",
     "nodemon": "^3.0.2",
     "postcss": "^8.4.32",
     "postcss-cli": "^11.0.0",
@@ -26,5 +26,6 @@
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "packageManager": "yarn@1.22.19"
 }
