--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for my-portfoliooo on 2024-01-03T13:00:08+01:00
+# fly.toml app configuration file generated for lashe on 2024-01-04T16:46:25+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "my-portfoliooo"
+app = "lashe"
 primary_region = "den"
 console_command = "/rails/bin/rails console"
 
